test(integration): enforce Java 17 release and remove Java 21-only APIs